--- a/QIX.BiblePTT/fmMain.resx
+++ b/QIX.BiblePTT/fmMain.resx
@@ -130,4 +130,7 @@
 11. Ces Vajtswv hais tais, “Lub ntiajteb cia li tuaj txhua yam nroj tsuag, qoobloo thiab tej xyoob ntoo, kom tawg paj txi txiv raws li nyias yam,” ces txawm muaj raws li Vajtswv hais.
 12. Yog li ntawd, lub ntiajteb thiaj muaj txhua yam xyoob ntoo nroj tsuag, thiab qoobloo uas txawj tawg paj txi txiv, Vajtswv pom tej uas nws tsim tau los ntawd, mas nws txaus siab heev.</value>
   </data>
+  <metadata name="openFileDialogBackgroud.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
