--- a/QIX.BiblePTT/fmMain.resx
+++ b/QIX.BiblePTT/fmMain.resx
@@ -165,7 +165,7 @@
         XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
         fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
         tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEQAACxEBf2RfkQAAOf5JREFUeF7t3Xt4FOXd
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEAAACxABrSO9dQAAOf5JREFUeF7t3Xt4FOXd
         P/5CWx+LkGzOyea8m8NmcwARkaMcRUCKSClFRIoUEZV6RIuIWkpRKVKkiFQtIkVEVFREGtEHERExxhgj
         ohQ5JHvenZ1dSADb57q+v/s392wiQ/gk7G4mh9l9//G6wM/uTjZzMW/ve+Y+/IQxBgDQJZBFAIDOQBYB
         ADoDWQQA6AxkEQCgM5BFAIDOQBYBADoDWQQA6AxkEQCgM5BFAIDOQBYBADoDWQQA6AxkEQCgM5BFAIDO
@@ -416,7 +416,7 @@
         ANAZyCIAQMdjP/n/AeYkiKTlPTHTAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="menuStripMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>20, 14</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
